[package]
name = "dynamics"
version = "0.1.0"
authors = ["bendou <sami.dahoux@etu.emse.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geomath = ""
rand = ""
serde = { version = "0.9", features = ["derive"] }
serde_json = "0.9"